--- a/css/index.css
+++ b/css/index.css
@@ -87,10 +87,19 @@ p, a {
 header {
     width: 100%;
     height: 100vh;
+    color: white;
+    text-align: center;
     background-image: url('../img/home-header.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+.headerlinks {
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color: white;
+    word-spacing: 50%;
 }
 
 /* spacers */
@@ -110,6 +119,7 @@ header {
     width: 100%;
     height: 100vh;
     text-align: center;
+    color: white;
     background-color: rgb(0, 4, 17);
 }
 
@@ -125,6 +135,7 @@ header {
 }
 
 .about-container {
+    color: white;
     height: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -143,6 +154,7 @@ header {
 
 /* contact us section */
 .contact {
+    color: white;
     text-align: center;
     background-image: url("../img/jumbo-restaurant.jpg");
     background-size: cover;
@@ -246,6 +258,8 @@ footer {
 
     /* footer section */
     footer {
+        width:100%;
+        background-color: rgb(0, 4, 17);
         height: auto;
         padding-top: 2.5vh;
         font-size: 2rem;
